Modified the files to properly scroll and stuff with jQuery

--- a/examples/ex14-gui.html
+++ b/examples/ex14-gui.html
@@ -18,6 +18,8 @@
 
 		<title>Example 14 - Graphical User Interface</title>
 		
+		<script src="jquery-1.7.1.js" charset="utf-8"></script>
+		<script src="jquery.mousewheel.js" charset="utf-8"></script>
 		<link rel="stylesheet" href="ui-style.css" />
 		<script src="../utils/modernizr-1.7.min.js" charset="utf-8"></script>
 		<script src="game-ex14.js" charset="utf-8"></script>
